--- a/sass/main.css
+++ b/sass/main.css
@@ -54,6 +54,7 @@ html {
   font-size: 2.5rem;
   padding: 1rem;
   background: rgba(17, 173, 95, 0.7);
+  z-index: 9999;
 }
 .container .fixed .active {
   text-decoration: underline;
