z-index in sticky

--- a/sass/main.css
+++ b/sass/main.css
@@ -66,6 +66,7 @@ html {
   background-color: rgba(54, 115, 148, 0.5);
   top: 0;
   height: 7rem;
+  z-index: 99999;
 }
 .container span {
   padding: 0.5rem;
