--- a/sass/mian.scss
+++ b/sass/mian.scss
@@ -102,6 +102,7 @@ html{
         background-color: rgba(54, 115, 148, 0.5);
         top: 0;
         height: 7rem;
+        z-index: 99999;
         // border:100rem;
         // background: blue;
         // left: 0;
