--- a/sass/mian.scss
+++ b/sass/mian.scss
@@ -102,8 +102,8 @@ html{
         position: fixed;
         background-color: rgba(54, 115, 148, 0.5);
         top: 0;
-        height: 7rem;
-        z-index: 9999999;
+        height: 8rem;
+        z-index: 999999;
         // border:100rem;
         // background: blue;
         // left: 0;
